<resources>
    <string name="app_name">Tur It</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="puntos">Puntos</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description_header">Una mesa con un mapa arriba. Se ven manos de dos personas que están planeando un viaje,
        una tiene una taza de café en la mano y la otra está tomando apuntes en una libreta.
        También se observa una computadora portátil, dos camaras de fotos, un vaso de agua y dos pequeñas plantas cactus sobre la mesa.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="perfil">Perfil</string>
    <string name="cambiar_datos_usuario">Cambiar datos de usuario</string>
    <string name="datos_de_usuario">Datos del usuario</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="historial_canjes">Historial de canjes</string>
    <string name="terminos_condiciones">Términos y Condiciones</string>
    <string name="sobre_nosotros">Sobre nosotros</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="description_puerto">Se observa el muelle en el puerto de Salto, Uruguay, con una grúa de puerto para contenedores.
        A lo lejos se ve el río Uruguay y en el horizonte se ven edificaciones en la ciudad de Concordia, Entre Ríos, Argentina.</string>
    <string name="texto_agregar">Agregar Puerto de Salto para ganar mas puntos.</string>
    <string name="description_shopping">Se observa el interior del shopping de Salto, a los costados las tiendas,
        en el centro la escalera mecánica para subir y el ascensor.</string>
    <string name="texto_canjear_premios">Locales donde canjear sus premios.</string>
    <string name="description_parque">Parque acuático de Salto. Se ven 3 altos toboganes a lo lejos, árboles a los costados y abajo
        en el medio de la imágen un río artificial por donde la gente pasea en gomones flotando.</string>
    <string name="texto_lugres_recomendados">Lugares recomendados a visitar.</string>
    <string name="seguridad">Seguridad</string>
    <string name="description_logo">Logo de la aplicación: Es un circulo anaranjado con un pin de ubicación azul y al lado dice Tur It en color anaranjado.</string>
    <string name="agrgar_punto">AGREGAR PUNTO TURÍSTICO</string>
    <string name="description_foto_tomada">En este espacio se mustra la foto tomada por el usuario al punto turístico de interés.</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="responder_formulario">Responder Formulario</string>
    <string name="tiendas_texto_appbarlayout">TIENDAS DONDE CANJEAR TUS TICKETS</string>
    <string name="home_item_title">Home</string>
    <string name="ticket_item_title">Tickets</string>
    <string name="agregar_item_title">Agregar</string>
    <string name="lugares_item_title">Lugares</string>
    <string name="tiendas_item_title">Tiendas</string>
    <string name="toolbar_premio_a_seleccionar">PREMIO A SELECCIONAR</string>
    <string name="toolbar_formulario">FORMULARIO</string>
    <string name="toolbar_gracias">¡GRACIAS!</string>
    <string name="misTickets">Mis Tickets</string>
    <string name="toolbar_misTicketsSinCanjear">MIS TICKETS SIN CANJEAR</string>
    <string name="toolbar_notificaciones">Notificaciones</string>
    <string name="toolbar_tickets_para_canjear">TICKETS PARA CANJEAR</string>
    <string name="toolbar_tiendas">LOCALES DONDE CANJEAR TUS TICKETS</string>
    <string name="pregunta_locacion">¿Te resultó fácil llegar a esta locación?</string>
    <string name="hint_pregunta_locacion">Ej.: No, el camino estaba en mal estado.</string>
    <string name="pregunta_mejoras">¿Qué mejorarías de este lugar?</string>
    <string name="hint_pregunta_mejoras">Ej.: falta limpieza, baños, tiendas, etc.</string>
    <string name="pregunta_comentarios_extras">Comentarios extras que desees agregar</string>
    <string name="hint_pregunta_comentarios_extras">Comentario extra</string>
    <string name="formulario_arrastrar_pin">Pulsar el Boton Generar Ubicación Actual para guardarla con tus Respuestas</string>
    <string name="boton_generar_ubicacion">Generar Ubicación Actual</string>
    <string name="boton_enviar_formulario">ENVIAR FORMULARIO</string>
    <string name="formulario_texto_explicativo">RESPONDÉ LAS SIGUIENTES PREGUNTAS SOBRE ESTE ATRACTIVO TURÍSTICO PARA GANAR PUNTOS Y CANJEARLOS POR LOS PREMIOS QUE QUIERAS.</string>
    <string name="icono_ticket">Icono de Mis Tickets. Al seleccionar se abre la ventana donde están todos los tickets qr que ha solicitado pero aún no ha canjeado en la tienda correspondiente. Una vez se encuentre en la tienda, ingrese aquí para que puedan escanearle su código.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="facebook_application_id" translatable="false">1720649918130250</string>

    <string name="facebook_login_protocol_schema" translatable="false">fb1720649918130250</string>
    <string name="title_activity_formulario">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lugares">Map</string>

</resources>