<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FormularioActivity"
    tools:showIn="@layout/activity_formulario">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/textoFormularioTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="848dp"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"
            android:text="@string/formulario_texto_explicativo"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/textoFormularioTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />

        <TextView
            android:id="@+id/pregunta1TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:text="@string/pregunta_locacion"
            android:textColor="@color/white"
            android:textSize="@dimen/texto_formulario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"/>

        <EditText
            android:id="@+id/respuesta1ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_pregunta_locacion"
            android:inputType="textMultiLine"
            android:maxWidth="300dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/texto_formulario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pregunta1TV" />

        <TextView
            android:id="@+id/pregunta2TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:text="@string/pregunta_mejoras"
            android:textColor="@color/white"
            android:textSize="@dimen/texto_formulario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/respuesta1ET" />

        <EditText
            android:id="@+id/respuesta2ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_pregunta_mejoras"
            android:inputType="textMultiLine"
            android:maxWidth="300dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/texto_formulario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.226"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pregunta2TV" />

        <TextView
            android:id="@+id/pregunta3TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="44dp"
            android:text="@string/pregunta_comentarios_extras"
            android:textColor="@color/white"
            android:textSize="@dimen/texto_formulario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/respuesta2ET" />

        <EditText
            android:id="@+id/respuesta3ET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_pregunta_comentarios_extras"
            android:inputType="textMultiLine"
            android:maxWidth="300dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/texto_formulario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pregunta3TV" />

        <TextView
            android:id="@+id/ubicacionActualTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/formulario_arrastrar_pin"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/respuesta3ET" />

        <Button
            android:id="@+id/enviarUbicacionFormulario"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/dark_golden"
            android:text="@string/boton_generar_ubicacion"
            android:textColor="@color/darker_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ubicacionActualTV" />

        <EditText
            android:id="@+id/txtLat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="115dp"
            android:ems="10"
            android:focusable="false"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"></EditText>

        <EditText
            android:id="@+id/txtLong"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:focusable="false"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"></EditText>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ubicacionActualIV"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="350dp"
            android:layout_height="230dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enviarUbicacionFormulario"
            app:layout_editor_absoluteX="8dp"
            app:layout_editor_absoluteY="8dp" />

        <Button
            android:id="@+id/enviarFormularioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/dark_golden"
            android:text="@string/boton_enviar_formulario"
            android:textColor="@color/darker_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ubicacionActualIV" />

        <!--<ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enviarFormularioButton"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>