<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".AgregarActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TurIt.AppBarOverlay"
        android:elevation="10dp"
        android:background="@drawable/toolbar_roundcorner">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/agregarTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/darker_blue"
                android:fontFamily="@font/archivo_black"
                android:text="@string/agrgar_punto"
                android:textColor="@color/dark_golden"
                android:textSize="22sp"
                android:letterSpacing="0.05"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fotoIV"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="38dp"
                app:layout_constraintBottom_toTopOf="@+id/tomarFotoBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:elevation="10dp"
                android:contentDescription="@string/description_foto_tomada"
                android:background="@drawable/rounded_4_corners_darkblue"/>

            <Button
                android:id="@+id/tomarFotoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/tomar_foto"
                app:layout_constraintBottom_toTopOf="@+id/pasarAFormularioBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fotoIV"
                android:textColor="@color/darker_blue"
                android:backgroundTint="@color/dark_golden"
                />

            <Button
                android:id="@+id/pasarAFormularioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="141dp"
                android:text="@string/responder_formulario"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tomarFotoBtn"
                android:textColor="@color/darker_blue"
                android:backgroundTint="@color/dark_golden"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp">

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_NavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:elevation="8dp"
            app:menu="@menu/menu_bottom"
            app:labelVisibilityMode="selected"
            style="@style/AppTheme"
            android:background="@drawable/bottomnavbar_roundcorner"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>